--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,6 +1,6 @@
 <ion-slide-box>
     <ion-slide>
-        <div class="box blue"><h1>Blue</h1></div>
+        <div style="background:blue;height:100%"><h1>Blue</h1></div>
     </ion-slide>
     <ion-slide>
         <div class="box yellow"><h1>Yellow</h1></div>
