--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,11 +1,36 @@
-<ion-slide-box>
-    <ion-slide>
-        <div style="background:blue;height:100%"><h1>Blue</h1></div>
-    </ion-slide>
-    <ion-slide>
-        <div class="box yellow"><h1>Yellow</h1></div>
-    </ion-slide>
-    <ion-slide>
-        <div class="box pink"><h1>Pink</h1></div>
-    </ion-slide>
-</ion-slide-box>
+<ion-side-menus enable-menu-with-back-views="false">
+  <ion-side-menu-content>
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+
+      <ion-nav-buttons side="left">
+        <button class="button button-clear ion-navicon" menu-toggle="left">
+        </button>
+      </ion-nav-buttons>
+    </ion-nav-bar>
+    <ion-nav-view name="menuContent"></ion-nav-view>
+  </ion-side-menu-content>
+
+  <ion-side-menu side="left">
+    <ion-header-bar class="bar-stable">
+      <h1 class="title">Left</h1>
+    </ion-header-bar>
+    <ion-content>
+      <ion-list>
+        <ion-item menu-close ng-click="showWarning()">
+          Warning
+        </ion-item>
+        <ion-item menu-close href="#/app/search">
+          Search
+        </ion-item>
+        <ion-item menu-close href="#/app/browse">
+          Browse
+        </ion-item>
+        <ion-item menu-close href="#/app/playlists">
+          Playlists
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-side-menu>
+</ion-side-menus>
