添加了顶部的提示插件

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,13 +1,12 @@
-   <ion-side-menus>
-      
-<iu-menu-fader class="iu-backdrop"></iu-menu-fader>
+<ion-side-menus>
+      <iu-menu-fader class="iu-backdrop"></iu-menu-fader>
     
       <ion-side-menu-content style="width:70%;">
         <ion-header-bar class="bar-balanced">
           <h1 class="title title-left"><i class="ion-cloud"></i>IU</h1>
         </ion-header-bar>
         
-        <ion-content class="has-footer has-wallet">
+        <ion-content class="has-footer">
           <ion-list>
             <ion-item on-tap="showWarning()">Warning</ion-item>
             <ion-item>View</ion-item>
@@ -33,4 +32,4 @@
         </ion-content>
       </ion-side-menu>
       
-    </ion-side-menus>
+</ion-side-menus>
