--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,5 +3,16 @@
 
 @import "vendor/ionicons";
 
+@import "base/variables";
+@import "base/mixins";
+@import "base/placeholders";
+
 @import "module/backdrop";
+@import "module/flash";
+
+html {
+    height: 100%;
+    width: 100%;
+    font-size: 20px;
+}
 
